--- a/index.html
+++ b/index.html
@@ -26,10 +26,25 @@
             <section class="hero__container">
                 <div class="hero__image__container">
                     <img class="hero__image" src="./assets/hero.jpg" alt="hero image"/>
+                    <img class="hero__bg__pattern" src="./assets/svg/herobgpattren.svg" alt="hero bg pattern" />
+                    <img class="hero__shape" src="./assets/svg/heroShape.svg"  alt="hero shape"/>
                 </div>
                 <div class="hero__description">
-                    <h1 class="hero__text">Order from favourite restaurants near you.</h1>
+                    <h1 class="hero__text">Order food from favourite restaurants near you.</h1>
                     <button class="button__primary">Order now</button>
+                </div>
+            </section>
+            <!--Explore Menu-->
+            <section class="explore__menu__container">
+                <h1 class="explore__menu__text">Explore Our Menu</h1>
+                <div class="explore__menu__lists">
+                    <div class="food__menu__card">
+                        <img src="./assets/burger.jpg" alt="burger" class="food__image"/>
+                        <div class="foo__menu__card__description">
+                            <h3 class="food__title">Burger</h3>
+                            <p class="food__restaurants"></p>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
