--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <!--Explore Menu-->
             <section class="explore__menu__container">
                 <h1 class="explore__menu__text">Explore Our Menu</h1>
+                <div class="explore__menu__gradient__bg">
+
+                </div>
                 <div class="explore__menu__lists">
                     <!-- Burger -->
                     <div class="food__menu__card">
@@ -47,7 +50,7 @@
                         </div>
                     </div>
                      <!-- Pizza -->
-                     <div class="food__menu__card">
+                     <div class="food__menu__card" id="pizza__card">
                         <img src="./assets/pizza.jpg" alt="pizza" class="food__image"/>
                         <div class="food__menu__card__description">
                             <h3 class="food__title">Pizza</h3>
@@ -66,6 +69,7 @@
                 <div class="explore__menu__view__more">
                     <button class="button__primary">View More</button>
                 </div>
+                
             </section>
         </main>
     </body>
