add stay updated

--- a/index.html
+++ b/index.html
@@ -92,6 +92,25 @@
                     </div>
                 </div>
             </section>
+            <!--Stay Updated-->
+            <section class="stay__updated__container">
+                <h1 class="stay__updated__text">Stay Updated</h1>
+                <div class="stay__updated__info">
+                    <div class="stay__updated__email">
+                        <form class="stay__updated__email__form">
+                            <input type="email" class="stay__updated__email__input" placeholder="email@email.com" size="25">
+                        </form>
+                    </div>
+                    <div class="stay__updated__button">
+                        <button class="button__primary" type="submit">Get Updates</button>
+                    </div>
+                </div>
+                <!--
+                <div class="stay__updated__image">
+                    <img src="assets/stayUpdated.jpg" class="stay__updated__bg__image"/>
+                </div>
+                -->
+            </section>
         </main>
     </body>
 </html>
