--- a/index.html
+++ b/index.html
@@ -105,11 +105,13 @@
                         <button class="button__primary" type="submit">Get Updates</button>
                     </div>
                 </div>
-                <!--
-                <div class="stay__updated__image">
-                    <img src="assets/stayUpdated.jpg" class="stay__updated__bg__image"/>
+            </section>
+            <!--Quote-->
+            <section class="quote__container">
+                <h1 class="quote__text">When a man's stomach is full it makes no difference whether he is rich or poor.</h1>
+                <div class="quote__bg__image">
+                    <img src="assets/quote.jpg" class="quote__image" alt="quote image"/>
                 </div>
-                -->
             </section>
         </main>
     </body>
