--- a/index.html
+++ b/index.html
@@ -114,5 +114,17 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <div class="footer__contents">
+                <img src="./assets/logo.png" alt="footer logo" class="footer__logo__image"/>
+                <div class="footer__items">
+                    <h1 class="footer__items__text">Pricing</h1>
+                    <h1 class="footer__items__text">Terms and conditions</h1>
+                    <h1 class="footer__items__text">Partnership</h1>
+                    <h1 class="footer__items__text">Career</h1>
+                    <h1 class="footer__items__text">Contact</h1>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
